# render-core

./: .gitignore  CMakeLists.txt
assets/shaders/: basic.frag  basic.vert  mesh.frag  mesh.vert  particles.frag  particles.vert  sky.frag  sky.vert
src/: main.cpp
src/core/: app.cpp  app.hpp
src/render/: camera.cpp  camera.hpp
